# bassline-labelling

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  generate_crepe.py  label_and_generate.py
src/: generate.py  label_methods.py
src/ablt/: utilities.py
src/ablt/bass_line_extractor/: __init__.py  extractor_class.py
src/ablt/bass_line_transcriber/: transcribe.py  transcriber_class.py
src/ablt/bass_line_transcriber/transcription/: F0_estimation.py
src/ablt/bass_line_transcriber/transcription/quantization/: pitch_quantization.py  quantization_schemes.py
src/bass_line_labelling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crepe_notes/: crepe_notes.py
